--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,11 +3,11 @@ Template Name: E-SHOP HTML E-Commerce Template
 Author: yaminncco
 
 Colors:
-	Body 		  : #4A4E5A
-	Headers 	: #30323A
-	Primary 	: #F8694A
-	Dark 		  :	#30323A
-	Grey 		  : #DADADA #F6F7F8
+  Body      : #4A4E5A
+  Headers   : #30323A
+  Primary   : #F8694A
+  Dark      : #30323A
+  Grey      : #DADADA #F6F7F8
 
 Fonts: Hind
 
@@ -53,11 +53,11 @@ Table OF Contents
 ------------------------------------*/
 
 /*=========================================================
-	01 -> GENERAL
+  01 -> GENERAL
 ===========================================================*/
 
 /*----------------------------*\
-	Typography
+  Typography
 \*----------------------------*/
 
 body {
@@ -117,7 +117,7 @@ hr {
 }
 
 /*----------------------------*\
-	Buttons
+  Buttons
 \*----------------------------*/
 
 .main-btn, .primary-btn {
@@ -163,7 +163,7 @@ hr {
 }
 
 /*----------------------------*\
-	Inputs
+  Inputs
 \*----------------------------*/
 
 .input {
@@ -203,7 +203,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Lists
+  Lists
 \*----------------------------*/
 
 .list-links .list-links-title {
@@ -248,7 +248,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Sections
+  Sections
 \*----------------------------*/
 
 .section {
@@ -283,7 +283,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Breadcrumb
+  Breadcrumb
 \*----------------------------*/
 
 #breadcrumb {
@@ -308,7 +308,7 @@ textarea.input {
 }
 
 /*=========================================================
-	02 -> HEADER
+  02 -> HEADER
 ===========================================================*/
 
 #header {
@@ -317,7 +317,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Top header
+  Top header
 \*----------------------------*/
 
 #top-header {
@@ -340,7 +340,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	logo
+  logo
 \*----------------------------*/
 
 .header-logo {
@@ -354,7 +354,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Search header
+  Search header
 \*----------------------------*/
 
 .header-search {
@@ -390,7 +390,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Account header
+  Account header
 \*----------------------------*/
 
 .header-btns>li {
@@ -427,7 +427,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Cart header
+  Cart header
 \*----------------------------*/
 
 .header-cart .header-btns-icon .qty {
@@ -467,7 +467,7 @@ textarea.input {
 }
 
 /*=========================================================
-	03 -> NAVIGATION
+  03 -> NAVIGATION
 ===========================================================*/
 
 #navigation {
@@ -479,7 +479,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Category nav
+  Category nav
 \*----------------------------*/
 
 .category-nav {
@@ -549,7 +549,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Menu nav
+  Menu nav
 \*----------------------------*/
 
 .menu-nav .menu-header {
@@ -582,7 +582,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Dropdowns
+  Dropdowns
 \*----------------------------*/
 
 .custom-menu {
@@ -673,7 +673,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Mobile nav
+  Mobile nav
 \*----------------------------*/
 
 #header .nav-toggle {
@@ -778,7 +778,7 @@ textarea.input {
 }
 
 /*=========================================================
-	04 -> BANNERS
+  04 -> BANNERS
 ===========================================================*/
 
 .banner {
@@ -814,7 +814,7 @@ textarea.input {
 }
 
 /*=========================================================
-	05 -> HOME SLIDER
+  05 -> HOME SLIDER
 ===========================================================*/
 
 #home .home-wrap {
@@ -826,7 +826,7 @@ textarea.input {
 }
 
 /*=========================================================
-	06 -> PRODUCT
+  06 -> PRODUCT
 ===========================================================*/
 
 .product .product-old-price {
@@ -885,7 +885,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Single product
+  Single product
 \*----------------------------*/
 
 .product.product-single {
@@ -1009,7 +1009,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	 Widget product
+   Widget product
 \*----------------------------*/
 
 .product.product-widget {
@@ -1063,7 +1063,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Product slick
+  Product slick
 \*----------------------------*/
 
 .product-slick .slick-slide {
@@ -1072,11 +1072,11 @@ textarea.input {
 }
 
 /*=========================================================
-	07 -> PRODUCTS PAGE
+  07 -> PRODUCTS PAGE
 ===========================================================*/
 
 /*----------------------------*\
-	Aside
+  Aside
 \*----------------------------*/
 
 #aside .aside {
@@ -1191,7 +1191,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Store
+  Store
 \*----------------------------*/
 
 #store {
@@ -1268,11 +1268,11 @@ textarea.input {
 }
 
 /*=========================================================
-	08 -> PRODUCT DETAILS PAGE
+  08 -> PRODUCT DETAILS PAGE
 ===========================================================*/
 
 /*----------------------------*\
-	Product view
+  Product view
 \*----------------------------*/
 
 #product-main-view .slick-arrow {
@@ -1307,7 +1307,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Product details
+  Product details
 \*----------------------------*/
 
 .product.product-details .product-name {
@@ -1384,7 +1384,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Product tab
+  Product tab
 \*----------------------------*/
 
 .product-tab {
@@ -1526,7 +1526,7 @@ textarea.input {
 }
 
 /*=========================================================
-	09 -> CHECKOUT PAGE
+  09 -> CHECKOUT PAGE
 ===========================================================*/
 
 .shiping-methods {
@@ -1593,7 +1593,7 @@ textarea.input {
 }
 
 /*=========================================================
-	10 -> FOOTER
+  10 -> FOOTER
 ===========================================================*/
 
 .footer {
@@ -1636,11 +1636,11 @@ textarea.input {
 }
 
 /*=========================================================
-	11 -> SLICK
+  11 -> SLICK
 ===========================================================*/
 
 /*----------------------------*\
-	Arrows
+  Arrows
 \*----------------------------*/
 
 .slick-prev, .slick-next {
@@ -1675,7 +1675,7 @@ textarea.input {
 }
 
 /*----------------------------*\
-	Dots
+  Dots
 \*----------------------------*/
 
 .slick-dots li, .slick-dots li button, .slick-dots li button:before {
@@ -1700,7 +1700,7 @@ textarea.input {
 }
 
 /*=========================================================
-	12 -> RESPONSIVE
+  12 -> RESPONSIVE
 ===========================================================*/
 
 @media only screen and (max-width: 991px) {
@@ -2326,7 +2326,67 @@ border-radius: 50em !important;
 .red {
   background-color: #961818;
 }
-/**manage end/
+.box1{
+  height:auto;
+  width:auto;
+  margin-left:24%;
+ 
+}
+@media screen and (max-width: 768px) {
+  .box1{
+    height:auto;
+    width:auto;
+    margin-left:0%;
+   
+  }
+}
+/**manage end*/
+
+
+
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: transparent;
+  position:absolute;
+  height: 61%;
+  overflow: auto;
+  color: black;
+  text-align: center;
+}
+
+.sidebar a {
+  display: block;
+  color: black;
+  padding: 0px;
+  text-decoration: none;
+}
+ 
+.sidebar a.active {
+  background-color:white;
+  font-size: 20px;
+  color: #961818;
+}
+
+.sidebar a:hover:not(.active) {
+  
+  color:#961818;
+}
+
+
+
+@media screen and (max-width: 768px) {
+.sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
+}
 
 
 
