--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2055,7 +2055,6 @@ iframe {
   position: absolute;
   top: 14px;
   left: -105px;
-  width: 80px;
 
 }
 
@@ -2065,11 +2064,11 @@ iframe {
   font-size: 15px;
   color: #555555;
   line-height: 1.2;
-
   display: block;
   width: 100%;
   background: transparent;
   padding: 0 5px;
+  height:33px;
 }
 
 .focus-input100 {
@@ -2332,11 +2331,11 @@ border-radius: 50em !important;
   margin-left:24%;
  
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1341px) {
   .box1{
     height:auto;
     width:auto;
-    margin-left:0%;
+    margin-left:0px;
    
   }
 }
@@ -2345,15 +2344,18 @@ border-radius: 50em !important;
 
 
 .sidebar {
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: transparent;
-  position:absolute;
-  height: 61%;
-  overflow: auto;
-  color: black;
-  text-align: center;
+ margin: 0;
+    top: 300px;
+    padding: 0;
+    border-right: 1px solid;
+    width: 200px;
+    background-color: transparent;
+    position: absolute;
+    height: 200px;
+    overflow: auto;
+    left: 118px;
+    color: black;
+    text-align: center;
 }
 
 .sidebar a {
@@ -2376,11 +2378,13 @@ border-radius: 50em !important;
 
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1341px) {
 .sidebar {
-    width: 100%;
+    width: 75%;
     height: auto;
+    top: 0px;
     position: relative;
+    border: 0px solid #FFF;
   }
   .sidebar a {
     text-align: center;
